--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="roymichael.jpg" alt="roy michael profile pic"></td>
+      <td><img src=""images/roymichael.jpg"" alt="roy michael profile pic"></td>
       <td>
         <h1>Roy Michael</h1>
         <p><em>Junior Web Developer and SEO Specialist of <strong><a href="https://thecryptosentral.com/">The Crypto Sentral</a></strong></em></p>
